force-app/main/default/objects/b3o__Site__c/b3o__Site__c.object-meta.xml
<CustomObject>
    <label>3B Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3B Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>