force-app/main/default/objects/b3o__Site__c/fields/b3_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>b3_Account_Owner_Name__c</fullName>
    <formula>b3s__Account__r.Owner.FirstName + &quot; &quot; +  b3s__Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>