force-app/main/default/objects/b3o__Site__c/fields/b3_Facility_Notes__c.field-meta.xml
<CustomField>
    <fullName>b3_Facility_Notes__c</fullName>
    <label>Facility Notes</label>
    <type>TextArea</type>
</CustomField>