force-app/main/default/objects/b3o__Site__c/fields/b3_Is_DI_or_EPS_Facility__c.field-meta.xml
<CustomField>
    <fullName>b3_Is_DI_or_EPS_Facility__c</fullName>
    <formula>OR(
INCLUDES(b3s__Account__r.b3_Business_Unit__c, &quot;D&amp;I&quot;),
INCLUDES(b3s__Account__r.b3_Business_Unit__c, &quot;EPS&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is D&amp;I or EPS Facility</label>
    <type>Checkbox</type>
</CustomField>