force-app/main/default/objects/b3o__Site__c/fields/b3_Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>b3_Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Sites</relationshipLabel>
    <relationshipName>X3B_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>