force-app/main/default/objects/b3o__Site__c/fields/b3o__City__c.field-meta.xml
<CustomField>
    <fullName>b3o__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>