force-app/main/default/objects/b3o__Site__c/fields/b3o__Coordinates__c.field-meta.xml
<CustomField>
    <fullName>b3o__Coordinates__c</fullName>
    <label>Coordinates</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>