force-app/main/default/objects/b3o__Site__c/fields/b3o__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>b3o__Full_Address__c</fullName>
    <formula>b3o__Street_Address__c &amp; &quot;, &quot; &amp;  b3o__City__c &amp; &quot;, &quot; &amp;  b3o__Post_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>