force-app/main/default/objects/b3o__Site__c/fields/b3o__Post_Code__c.field-meta.xml
<CustomField>
    <fullName>b3o__Post_Code__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>