force-app/main/default/objects/b3o__Site__c/fields/b3o__Public_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Public_Name__c</fullName>
    <inlineHelpText>This is the name/designation of this site that will be publically visible</inlineHelpText>
    <label>Public Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>