force-app/main/default/objects/b3o__Site__c/fields/b3o__Site_Name_for_Job_Board__c.field-meta.xml
<CustomField>
    <fullName>b3o__Site_Name_for_Job_Board__c</fullName>
    <formula>if(isblank(b3o__Public_Name__c), Name, b3o__Public_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name for Job Board</label>
    <type>Text</type>
</CustomField>