force-app/main/default/objects/b3o__Site__c/fields/b3o__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>b3o__Street_Address__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>