force-app/main/default/objects/b3o__Site__c/fields/b3s__Account__c.field-meta.xml
<CustomField>
    <fullName>b3s__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>3B Sites</relationshipLabel>
    <relationshipName>X3B_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>