force-app/main/default/objects/b3o__Site__c/fields/b3s__Site_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>b3s__Site_Location_Link__c</fullName>
    <formula>HYPERLINK(
    &quot;https://www.google.com/maps/search/?api=1&amp;query=&quot; + 
    TEXT(b3o__Coordinates__Latitude__s) + &quot;,&quot; + 
    TEXT(b3o__Coordinates__Longitude__s), 
    &quot;View on Map&quot;, 
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Location Link</label>
    <type>Text</type>
</CustomField>