force-app/main/default/objects/b3o__Site__c/fields/b3s__Site_Timezone__c.field-meta.xml
<CustomField>
    <fullName>b3s__Site_Timezone__c</fullName>
    <label>Site Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa/Abidjan</fullName>
            </value>
            <value>
                <fullName>Africa/Accra</fullName>
            </value>
            <value>
                <fullName>Africa/Addis_Ababa</fullName>
            </value>
            <value>
                <fullName>Africa/Algiers</fullName>
            </value>
            <value>
                <fullName>Africa/Asmara</fullName>
            </value>
            <value>
                <fullName>Africa/Asmera</fullName>
            </value>
            <value>
                <fullName>Africa/Bamako</fullName>
            </value>
            <value>
                <fullName>Africa/Bangui</fullName>
            </value>
            <value>
                <fullName>Africa/Banjul</fullName>
            </value>
            <value>
                <fullName>Africa/Bissau</fullName>
            </value>
            <value>
                <fullName>Africa/Blantyre</fullName>
            </value>
            <value>
                <fullName>Africa/Brazzaville</fullName>
            </value>
            <value>
                <fullName>Africa/Bujumbura</fullName>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Africa/Casablanca</fullName>
            </value>
            <value>
                <fullName>Africa/Ceuta</fullName>
            </value>
            <value>
                <fullName>Africa/Conakry</fullName>
            </value>
            <value>
                <fullName>Africa/Dakar</fullName>
            </value>
            <value>
                <fullName>Africa/Dar_es_Salaam</fullName>
            </value>
            <value>
                <fullName>Africa/Djibouti</fullName>
            </value>
            <value>
                <fullName>Africa/Douala</fullName>
            </value>
            <value>
                <fullName>Africa/El_Aaiun</fullName>
            </value>
            <value>
                <fullName>Africa/Freetown</fullName>
            </value>
            <value>
                <fullName>Africa/Gaborone</fullName>
            </value>
            <value>
                <fullName>Africa/Harare</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Juba</fullName>
            </value>
            <value>
                <fullName>Africa/Kampala</fullName>
            </value>
            <value>
                <fullName>Africa/Khartoum</fullName>
            </value>
            <value>
                <fullName>Africa/Kigali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>